.ci/openshift-ci/smoke/http-server.yaml
# Define the pod for a http server app.
---
apiVersion: v1
kind: Pod
metadata:
  name: http-server
  labels:
    app: http-server-app
spec:
  containers:
    - name: http-server
      image: fedora
      ports:
        - containerPort: 8080
      command: ["python3"]
      args: [ "-m", "http.server", "8080"]
  runtimeClassName: kata
